--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,11 @@
-.DS_Store
-*.log
-.vscode/
-.idea/
+.venv/
 __pycache__/
 *.pyc
-.venv/
 .env
-.env.*
 node_modules/
-dist/
-.build/
-.next/
-.out/
 data/
 *.parquet
 *.csv
-*.feather
-*.arrow
-*.pkl
-*.pt
-*.bin
-*.onnx
-*.h5
-faiss.index
+*.ipynb_checkpoints
+.DS_Store
+.vscode/
