--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
 .venv/
+venv/
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+*.egg-info/
+.cache/
+.ipynb_checkpoints/
 .env
-node_modules/
-data/
-*.parquet
-*.csv
-*.ipynb_checkpoints
+.env.*
+*.pem
+*.key
 .DS_Store
 .vscode/
+.idea/
+data/
+outputs/
+checkpoints/
+models/
+*.log
+node_modules/
+dist/
+build/
