--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,7 @@
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.11.0
-attrs==25.4.0
-awswrangler==3.13.0
-blinker==1.9.0
-boto3==1.40.49
-botocore==1.40.49
-cachetools==6.2.0
-certifi==2025.10.5
-charset-normalizer==3.4.3
-click==8.1.8
-distro==1.9.0
-emoji==0.6.0
-exceptiongroup==1.3.0
-filelock==3.13.1
-fsspec==2025.9.0
-gitdb==4.0.12
-GitPython==3.1.45
-h11==0.16.0
-hf-xet==1.1.10
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.35.3
-idna==3.10
-Jinja2==3.1.6
-jiter==0.11.0
-jmespath==1.0.1
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-MarkupSafe==3.0.3
-mpmath==1.3.0
-narwhals==2.7.0
-networkx==3.2.1
-numpy==1.26.4
-openai==2.3.0
-packaging==25.0
-pandas==2.3.3
-pillow==11.3.0
-plotly==6.3.1
-protobuf==6.32.1
-pyarrow==20.0.0
-PyAthena==3.18.0
-pydantic==2.12.0
-pydantic_core==2.41.1
-pydeck==0.9.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-pytz==2025.2
-PyYAML==6.0.3
-referencing==0.36.2
-regex==2025.9.18
-requests==2.32.5
-rpds-py==0.27.1
-s3fs==0.4.2
-s3transfer==0.14.0
-safetensors==0.6.2
-sentencepiece==0.2.1
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-streamlit==1.50.0
-sympy==1.13.3
-tenacity==9.1.2
-tokenizers==0.22.1
-toml==0.10.2
-torch==2.2.2
-torchaudio==2.2.2
-torchvision==0.17.2
-tornado==6.5.2
-tqdm==4.67.1
-transformers==4.57.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==1.26.20
-sentence-transformers==2.7.0
-torch
+fastapi
+uvicorn[standard]
+pandas
+pyarrow
+boto3
+python-dotenv
+requests
