--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -8,6 +8,7 @@ boto3==1.40.49
 botocore==1.40.49
 cachetools==6.2.0
 certifi==2025.10.5
+openai>=1.0.0
 charset-normalizer==3.4.3
 click==8.1.8
 distro==1.9.0
