Update dashboard and API fixes

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+﻿# OpenAI API Key for AI-powered theme generation
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Optional: Local data directory
+# LOCAL_DATA_DIR=data
