--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -12,6 +12,7 @@ openai>=1.0.0
 charset-normalizer==3.4.3
 click==8.1.8
 distro==1.9.0
+scikit-learn==1.5.2
 emoji==0.6.0
 exceptiongroup==1.3.0
 filelock==3.13.1
